@@ -4,8 +4,10 @@ function GameConnection::saveTakeGame(%this) {
 	%file = new FileObject();
 	%file.openForWrite($Pref::Take::SaveDir @ "/" @ %this.bl_id);
 
-	%file.writeLine("client" TAB "score" TAB %this.score TAB "int");
-	%file.writeLine("client" TAB "highestCombo" TAB %this.highestCombo TAB "int");
+	%file.writeLine("client" TAB "score" TAB (%this.score | 0) TAB "int");
+	%file.writeLine("client" TAB "highestCombo" TAB (%this.highestCombo | 0) TAB "int");
+	%file.writeLine("client" TAB "wins" TAB (%this.wins | 0) TAB "int");
+	%file.writeLine("client" TAB "losses" TAB (%this.losses | 0) TAB "int");
 
 	%file.close();
 	%file.delete();
